# mbox2m365

./: README.adoc  adoc2rst  pyproject.toml  requirements.txt  setup.cfg  setup.py
mbox2m365/: __main__.py  mbox2m365.py
