[metadata]
name            = mbox2m365
version         = 1.0.0
description     = 'Send a message stored within an mbox using m365 (Office365)'
author          = Rudolph Pienaar
author_email    = rudolph.pienaar@childrens.harvard.edu
url             = https://github.com/FNNDSC/mbox2m365
license         = MIT
zip_safe        = False
packages        =
    mbox2m365
    jobber

[options]
install_requires =
    pfmisc
    pudb

[options.entry_points]
console_scripts     =
    mbox2m365 = mbox2m365.__main__:main